domainmodel.parent/domainmodel.idea/src/main/xtext-gen/org/example/domainmodel/idea/parser/antlr/internal/PsiInternalDomainmodelParser.java
package org.example.domainmodel.idea.parser.antlr.internal;

import org.eclipse.xtext.idea.parser.AbstractPsiAntlrParser;
import org.example.domainmodel.idea.lang.DomainmodelElementTypeProvider;
import org.eclipse.xtext.idea.parser.TokenTypeProvider;
import org.eclipse.xtext.parser.antlr.XtextTokenStream;
import org.eclipse.xtext.parser.antlr.XtextTokenStream.HiddenTokens;
import org.example.domainmodel.services.DomainmodelGrammarAccess;

import com.intellij.lang.PsiBuilder;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class PsiInternalDomainmodelParser extends AbstractPsiAntlrParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "RULE_ID", "RULE_INT", "RULE_STRING", "RULE_ML_COMMENT", "RULE_SL_COMMENT", "RULE_WS", "RULE_ANY_OTHER", "'package'", "'{'", "'}'", "'.'", "'import'", "'.*'", "'datatype'", "'entity'", "'extends'", "'many'", "':'"
    };
    public static final int RULE_STRING=6;
    public static final int RULE_SL_COMMENT=8;
    public static final int T__19=19;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int EOF=-1;
    public static final int RULE_ID=4;
    public static final int RULE_WS=9;
    public static final int RULE_ANY_OTHER=10;
    public static final int RULE_INT=5;
    public static final int RULE_ML_COMMENT=7;
    public static final int T__20=20;
    public static final int T__21=21;

    // delegates
    // delegators


        public PsiInternalDomainmodelParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PsiInternalDomainmodelParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return PsiInternalDomainmodelParser.tokenNames; }
    public String getGrammarFileName() { return "PsiInternalDomainmodel.g"; }



    	protected DomainmodelGrammarAccess grammarAccess;

    	protected DomainmodelElementTypeProvider elementTypeProvider;

    	public PsiInternalDomainmodelParser(PsiBuilder builder, TokenStream input, DomainmodelElementTypeProvider elementTypeProvider, DomainmodelGrammarAccess grammarAccess) {
    		this(input);
    		setPsiBuilder(builder);
        	this.grammarAccess = grammarAccess;
    		this.elementTypeProvider = elementTypeProvider;
    	}

    	@Override
    	protected String getFirstRuleName() {
    		return "Domainmodel";
    	}




    // $ANTLR start "entryRuleDomainmodel"
    // PsiInternalDomainmodel.g:52:1: entryRuleDomainmodel returns [Boolean current=false] : iv_ruleDomainmodel= ruleDomainmodel EOF ;
    public final Boolean entryRuleDomainmodel() throws RecognitionException {
        Boolean current = false;

        Boolean iv_ruleDomainmodel = null;


        try {
            // PsiInternalDomainmodel.g:52:53: (iv_ruleDomainmodel= ruleDomainmodel EOF )
            // PsiInternalDomainmodel.g:53:2: iv_ruleDomainmodel= ruleDomainmodel EOF
            {
             markComposite(elementTypeProvider.getDomainmodelElementType()); 
            pushFollow(FOLLOW_1);
            iv_ruleDomainmodel=ruleDomainmodel();

            state._fsp--;

             current =iv_ruleDomainmodel; 
            match(input,EOF,FOLLOW_2); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return current;
    }
    // $ANTLR end "entryRuleDomainmodel"


    // $ANTLR start "ruleDomainmodel"
    // PsiInternalDomainmodel.g:59:1: ruleDomainmodel returns [Boolean current=false] : ( (lv_elements_0_0= ruleAbstractElement ) )* ;
    public final Boolean ruleDomainmodel() throws RecognitionException {
        Boolean current = false;

        Boolean lv_elements_0_0 = null;


        try {
            // PsiInternalDomainmodel.g:60:1: ( ( (lv_elements_0_0= ruleAbstractElement ) )* )
            // PsiInternalDomainmodel.g:61:2: ( (lv_elements_0_0= ruleAbstractElement ) )*
            {
            // PsiInternalDomainmodel.g:61:2: ( (lv_elements_0_0= ruleAbstractElement ) )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==11||LA1_0==15||(LA1_0>=17 && LA1_0<=18)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // PsiInternalDomainmodel.g:62:3: (lv_elements_0_0= ruleAbstractElement )
            	    {
            	    // PsiInternalDomainmodel.g:62:3: (lv_elements_0_0= ruleAbstractElement )
            	    // PsiInternalDomainmodel.g:63:4: lv_elements_0_0= ruleAbstractElement
            	    {

            	    				markComposite(elementTypeProvider.getDomainmodel_ElementsAbstractElementParserRuleCall_0ElementType());
            	    			
            	    pushFollow(FOLLOW_3);
            	    lv_elements_0_0=ruleAbstractElement();

            	    state._fsp--;


            	    				doneComposite();
            	    				if(!current) {
            	    					associateWithSemanticElement();
            	    					current = true;
            	    				}
            	    			

            	    }


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return current;
    }
    // $ANTLR end "ruleDomainmodel"


    // $ANTLR start "entryRulePackageDeclaration"
    // PsiInternalDomainmodel.g:79:1: entryRulePackageDeclaration returns [Boolean current=false] : iv_rulePackageDeclaration= rulePackageDeclaration EOF ;
    public final Boolean entryRulePackageDeclaration() throws RecognitionException {
        Boolean current = false;

        Boolean iv_rulePackageDeclaration = null;


        try {
            // PsiInternalDomainmodel.g:79:60: (iv_rulePackageDeclaration= rulePackageDeclaration EOF )
            // PsiInternalDomainmodel.g:80:2: iv_rulePackageDeclaration= rulePackageDeclaration EOF
            {
             markComposite(elementTypeProvider.getPackageDeclarationElementType()); 
            pushFollow(FOLLOW_1);
            iv_rulePackageDeclaration=rulePackageDeclaration();

            state._fsp--;

             current =iv_rulePackageDeclaration; 
            match(input,EOF,FOLLOW_2); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return current;
    }
    // $ANTLR end "entryRulePackageDeclaration"


    // $ANTLR start "rulePackageDeclaration"
    // PsiInternalDomainmodel.g:86:1: rulePackageDeclaration returns [Boolean current=false] : (otherlv_0= 'package' ( (lv_name_1_0= ruleQualifiedName ) ) otherlv_2= '{' ( (lv_elements_3_0= ruleAbstractElement ) )* otherlv_4= '}' ) ;
    public final Boolean rulePackageDeclaration() throws RecognitionException {
        Boolean current = false;

        Token otherlv_0=null;
        Token otherlv_2=null;
        Token otherlv_4=null;
        Boolean lv_name_1_0 = null;

        Boolean lv_elements_3_0 = null;


        try {
            // PsiInternalDomainmodel.g:87:1: ( (otherlv_0= 'package' ( (lv_name_1_0= ruleQualifiedName ) ) otherlv_2= '{' ( (lv_elements_3_0= ruleAbstractElement ) )* otherlv_4= '}' ) )
            // PsiInternalDomainmodel.g:88:2: (otherlv_0= 'package' ( (lv_name_1_0= ruleQualifiedName ) ) otherlv_2= '{' ( (lv_elements_3_0= ruleAbstractElement ) )* otherlv_4= '}' )
            {
            // PsiInternalDomainmodel.g:88:2: (otherlv_0= 'package' ( (lv_name_1_0= ruleQualifiedName ) ) otherlv_2= '{' ( (lv_elements_3_0= ruleAbstractElement ) )* otherlv_4= '}' )
            // PsiInternalDomainmodel.g:89:3: otherlv_0= 'package' ( (lv_name_1_0= ruleQualifiedName ) ) otherlv_2= '{' ( (lv_elements_3_0= ruleAbstractElement ) )* otherlv_4= '}'
            {

            			markLeaf(elementTypeProvider.getPackageDeclaration_PackageKeyword_0ElementType());
            		
            otherlv_0=(Token)match(input,11,FOLLOW_4); 

            			doneLeaf(otherlv_0);
            		
            // PsiInternalDomainmodel.g:96:3: ( (lv_name_1_0= ruleQualifiedName ) )
            // PsiInternalDomainmodel.g:97:4: (lv_name_1_0= ruleQualifiedName )
            {
            // PsiInternalDomainmodel.g:97:4: (lv_name_1_0= ruleQualifiedName )
            // PsiInternalDomainmodel.g:98:5: lv_name_1_0= ruleQualifiedName
            {

            					markComposite(elementTypeProvider.getPackageDeclaration_NameQualifiedNameParserRuleCall_1_0ElementType());
            				
            pushFollow(FOLLOW_5);
            lv_name_1_0=ruleQualifiedName();

            state._fsp--;


            					doneComposite();
            					if(!current) {
            						associateWithSemanticElement();
            						current = true;
            					}
            				

            }


            }


            			markLeaf(elementTypeProvider.getPackageDeclaration_LeftCurlyBracketKeyword_2ElementType());
            		
            otherlv_2=(Token)match(input,12,FOLLOW_6); 

            			doneLeaf(otherlv_2);
            		
            // PsiInternalDomainmodel.g:118:3: ( (lv_elements_3_0= ruleAbstractElement ) )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==11||LA2_0==15||(LA2_0>=17 && LA2_0<=18)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // PsiInternalDomainmodel.g:119:4: (lv_elements_3_0= ruleAbstractElement )
            	    {
            	    // PsiInternalDomainmodel.g:119:4: (lv_elements_3_0= ruleAbstractElement )
            	    // PsiInternalDomainmodel.g:120:5: lv_elements_3_0= ruleAbstractElement
            	    {

            	    					markComposite(elementTypeProvider.getPackageDeclaration_ElementsAbstractElementParserRuleCall_3_0ElementType());
            	    				
            	    pushFollow(FOLLOW_6);
            	    lv_elements_3_0=ruleAbstractElement();

            	    state._fsp--;


            	    					doneComposite();
            	    					if(!current) {
            	    						associateWithSemanticElement();
            	    						current = true;
            	    					}
            	    				

            	    }


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            			markLeaf(elementTypeProvider.getPackageDeclaration_RightCurlyBracketKeyword_4ElementType());
            		
            otherlv_4=(Token)match(input,13,FOLLOW_2); 

            			doneLeaf(otherlv_4);
            		

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return current;
    }
    // $ANTLR end "rulePackageDeclaration"


    // $ANTLR start "entryRuleAbstractElement"
    // PsiInternalDomainmodel.g:144:1: entryRuleAbstractElement returns [Boolean current=false] : iv_ruleAbstractElement= ruleAbstractElement EOF ;
    public final Boolean entryRuleAbstractElement() throws RecognitionException {
        Boolean current = false;

        Boolean iv_ruleAbstractElement = null;


        try {
            // PsiInternalDomainmodel.g:144:57: (iv_ruleAbstractElement= ruleAbstractElement EOF )
            // PsiInternalDomainmodel.g:145:2: iv_ruleAbstractElement= ruleAbstractElement EOF
            {
             markComposite(elementTypeProvider.getAbstractElementElementType()); 
            pushFollow(FOLLOW_1);
            iv_ruleAbstractElement=ruleAbstractElement();

            state._fsp--;

             current =iv_ruleAbstractElement; 
            match(input,EOF,FOLLOW_2); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return current;
    }
    // $ANTLR end "entryRuleAbstractElement"


    // $ANTLR start "ruleAbstractElement"
    // PsiInternalDomainmodel.g:151:1: ruleAbstractElement returns [Boolean current=false] : (this_PackageDeclaration_0= rulePackageDeclaration | this_Type_1= ruleType | this_Import_2= ruleImport ) ;
    public final Boolean ruleAbstractElement() throws RecognitionException {
        Boolean current = false;

        Boolean this_PackageDeclaration_0 = null;

        Boolean this_Type_1 = null;

        Boolean this_Import_2 = null;


        try {
            // PsiInternalDomainmodel.g:152:1: ( (this_PackageDeclaration_0= rulePackageDeclaration | this_Type_1= ruleType | this_Import_2= ruleImport ) )
            // PsiInternalDomainmodel.g:153:2: (this_PackageDeclaration_0= rulePackageDeclaration | this_Type_1= ruleType | this_Import_2= ruleImport )
            {
            // PsiInternalDomainmodel.g:153:2: (this_PackageDeclaration_0= rulePackageDeclaration | this_Type_1= ruleType | this_Import_2= ruleImport )
            int alt3=3;
            switch ( input.LA(1) ) {
            case 11:
                {
                alt3=1;
                }
                break;
            case 17:
            case 18:
                {
                alt3=2;
                }
                break;
            case 15:
                {
                alt3=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // PsiInternalDomainmodel.g:154:3: this_PackageDeclaration_0= rulePackageDeclaration
                    {

                    			markComposite(elementTypeProvider.getAbstractElement_PackageDeclarationParserRuleCall_0ElementType());
                    		
                    pushFollow(FOLLOW_2);
                    this_PackageDeclaration_0=rulePackageDeclaration();

                    state._fsp--;


                    			current = this_PackageDeclaration_0;
                    			doneComposite();
                    		

                    }
                    break;
                case 2 :
                    // PsiInternalDomainmodel.g:163:3: this_Type_1= ruleType
                    {

                    			markComposite(elementTypeProvider.getAbstractElement_TypeParserRuleCall_1ElementType());
                    		
                    pushFollow(FOLLOW_2);
                    this_Type_1=ruleType();

                    state._fsp--;


                    			current = this_Type_1;
                    			doneComposite();
                    		

                    }
                    break;
                case 3 :
                    // PsiInternalDomainmodel.g:172:3: this_Import_2= ruleImport
                    {

                    			markComposite(elementTypeProvider.getAbstractElement_ImportParserRuleCall_2ElementType());
                    		
                    pushFollow(FOLLOW_2);
                    this_Import_2=ruleImport();

                    state._fsp--;


                    			current = this_Import_2;
                    			doneComposite();
                    		

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return current;
    }
    // $ANTLR end "ruleAbstractElement"


    // $ANTLR start "entryRuleQualifiedName"
    // PsiInternalDomainmodel.g:184:1: entryRuleQualifiedName returns [Boolean current=false] : iv_ruleQualifiedName= ruleQualifiedName EOF ;
    public final Boolean entryRuleQualifiedName() throws RecognitionException {
        Boolean current = false;

        Boolean iv_ruleQualifiedName = null;


        try {
            // PsiInternalDomainmodel.g:184:55: (iv_ruleQualifiedName= ruleQualifiedName EOF )
            // PsiInternalDomainmodel.g:185:2: iv_ruleQualifiedName= ruleQualifiedName EOF
            {
             markComposite(elementTypeProvider.getQualifiedNameElementType()); 
            pushFollow(FOLLOW_1);
            iv_ruleQualifiedName=ruleQualifiedName();

            state._fsp--;

             current =iv_ruleQualifiedName; 
            match(input,EOF,FOLLOW_2); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return current;
    }
    // $ANTLR end "entryRuleQualifiedName"


    // $ANTLR start "ruleQualifiedName"
    // PsiInternalDomainmodel.g:191:1: ruleQualifiedName returns [Boolean current=false] : (this_ID_0= RULE_ID (kw= '.' this_ID_2= RULE_ID )* ) ;
    public final Boolean ruleQualifiedName() throws RecognitionException {
        Boolean current = false;

        Token this_ID_0=null;
        Token kw=null;
        Token this_ID_2=null;

        try {
            // PsiInternalDomainmodel.g:192:1: ( (this_ID_0= RULE_ID (kw= '.' this_ID_2= RULE_ID )* ) )
            // PsiInternalDomainmodel.g:193:2: (this_ID_0= RULE_ID (kw= '.' this_ID_2= RULE_ID )* )
            {
            // PsiInternalDomainmodel.g:193:2: (this_ID_0= RULE_ID (kw= '.' this_ID_2= RULE_ID )* )
            // PsiInternalDomainmodel.g:194:3: this_ID_0= RULE_ID (kw= '.' this_ID_2= RULE_ID )*
            {

            			markLeaf(elementTypeProvider.getQualifiedName_IDTerminalRuleCall_0ElementType());
            		
            this_ID_0=(Token)match(input,RULE_ID,FOLLOW_7); 

            			doneLeaf(this_ID_0);
            		
            // PsiInternalDomainmodel.g:201:3: (kw= '.' this_ID_2= RULE_ID )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==14) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // PsiInternalDomainmodel.g:202:4: kw= '.' this_ID_2= RULE_ID
            	    {

            	    				markLeaf(elementTypeProvider.getQualifiedName_FullStopKeyword_1_0ElementType());
            	    			
            	    kw=(Token)match(input,14,FOLLOW_4); 

            	    				doneLeaf(kw);
            	    			

            	    				markLeaf(elementTypeProvider.getQualifiedName_IDTerminalRuleCall_1_1ElementType());
            	    			
            	    this_ID_2=(Token)match(input,RULE_ID,FOLLOW_7); 

            	    				doneLeaf(this_ID_2);
            	    			

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return current;
    }
    // $ANTLR end "ruleQualifiedName"


    // $ANTLR start "entryRuleImport"
    // PsiInternalDomainmodel.g:221:1: entryRuleImport returns [Boolean current=false] : iv_ruleImport= ruleImport EOF ;
    public final Boolean entryRuleImport() throws RecognitionException {
        Boolean current = false;

        Boolean iv_ruleImport = null;


        try {
            // PsiInternalDomainmodel.g:221:48: (iv_ruleImport= ruleImport EOF )
            // PsiInternalDomainmodel.g:222:2: iv_ruleImport= ruleImport EOF
            {
             markComposite(elementTypeProvider.getImportElementType()); 
            pushFollow(FOLLOW_1);
            iv_ruleImport=ruleImport();

            state._fsp--;

             current =iv_ruleImport; 
            match(input,EOF,FOLLOW_2); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return current;
    }
    // $ANTLR end "entryRuleImport"


    // $ANTLR start "ruleImport"
    // PsiInternalDomainmodel.g:228:1: ruleImport returns [Boolean current=false] : (otherlv_0= 'import' ( (lv_importedNamespace_1_0= ruleQualifiedNameWithWildcard ) ) ) ;
    public final Boolean ruleImport() throws RecognitionException {
        Boolean current = false;

        Token otherlv_0=null;
        Boolean lv_importedNamespace_1_0 = null;

